k3s/apps/postgres-db/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-db
  labels:
    pod-security.kubernetes.io/enforce: privileged
